--- a/src/pages/clientes/Clientes.module.css
+++ b/src/pages/clientes/Clientes.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   height: 100%;
-  /* width: 100%; */
+  color: #f7f7f7;
 }
 
 .divClientes h1 {
@@ -18,4 +18,9 @@
   align-items: stretch;
   grid-template-columns: repeat(4, auto);
   grid-column-gap: 38px;
+}
+
+.msgEnd {
+  margin-top: 50px;
+  margin-left: 30px;
 }
